--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "imagemin.js",
   "scripts": {
     "img": "node imagemin.mjs",
+    "img:watch": "onchange -k _resource/assets/img/**/*.{jpg,jpeg,png,svg,gif} -- npm run img", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "imagemin": "^7.0.1",
+    "imagemin": "^8.0.1",
     "imagemin-gifsicle": "^7.0.0",
     "imagemin-keep-folder": "^5.3.2",
-    "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-pngquant": "^8.0.0",
-    "imagemin-svgo": "^10.0.1"
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-svgo": "^10.0.1",
+    "onchange": "^7.1.0",
+    "path": "^0.12.7"
   }
 }
